--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,7 @@
 click==8.1.3
 colorama==0.4.5
 Flask==2.2.2
+Flask-Cors==3.0.10
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -11,6 +12,7 @@ numpy==1.21.6
 regex==2022.8.17
 scikit-learn==1.0.2
 scipy==1.7.3
+six==1.16.0
 sklearn==0.0
 threadpoolctl==3.1.0
 tqdm==4.64.1
